# QAP-ZEUS-API-V4

./: README.MD  README.md  entrypoint.sh  pyproject.toml  robocop.cfg  test-runner.Dockerfile
API/: Get-api.robot
Documentation/: projeto_testes.docx  schema_example.json
Interfaces/brief/: GET-interfaces_brief.robot
Interfaces/counters/: GET-interfaces_counters.robot
Interfaces/stats/: GET-interfaces_stats.robot
InterfacesEthernets/counters/: GET-interfaces_ethernets_counters.robot
InterfacesEthernets/ethernet/: GET-interfaces_ethernets_id.robot  PUT-interfaces_ethernets_id.robot
InterfacesEthernets/ethernetcounters/: GET-interfaces_ethernets_id_counters.robot
InterfacesEthernets/ethernets/: GET-interfaces_ethernets.robot
InterfacesEthernets/ethernetstats/: GET-interfaces_ethernets_id_stats.robot
InterfacesEthernets/ethernetstatus/: GET-interfaces_ethernets_id_status.robot
InterfacesEthernets/stats/: GET-interfaces_ethernets_stats.robot
InterfacesEthernets/status/: GET-interfaces_ethernets_status.robot
InterfacesWifiSSIDs/ssidsacls/: log.html  (+5 more)
Scripts/: execute-test-runner.sh  jenkins-python.Dockerfile  service_provider.py  test_runner.py  test_runner_listener.py  tree_directory_gen.py  variable_extractor.py
_TestTemplate/: DELETE-template.robot  GET-template.robot  POST-template.robot  PUT-template.robot
resources/: api_response_analysis.resource  common_resource.resource  configure_request_data.resource  documentation_analysis.resource  send_requests_to_api.resource
util/: api_service.py  api_variables.py  find_documentation_info.py
(+286 files in other folders)
